--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "axios": "^0.19.2",
-    "axios-mock-adapter": "^1.18.1",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^3.5.2",
-    "file-loader": "^6.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "style-loader": "^1.1.4",
-    "webpack-cli": "^3.3.11"
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "axios": "^0.21.1",
+    "axios-mock-adapter": "^1.19.0",
+    "css-loader": "^5.2.1",
+    "file-loader": "^6.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "style-loader": "^2.0.0",
+    "webpack-cli": "^4.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,10 +37,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@testing-library/jest-dom": "^5.3.0",
-    "@testing-library/react": "^10.0.2",
-    "@testing-library/user-event": "^7.1.2",
-    "webpack-dev-server": "^3.10.3"
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.2"
   }
 }
